src/snapshots/tuisage__ui__tests__snapshot_choices_flag.snap
---
source: src/ui.rs
assertion_line: 622
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────┐
│ $ mycli format                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Commands ────────────────────┐┌ Flags ───────────────────────────────────────┐
│▶ format           Format code││  [·] --style = <compact|expanded|default>    │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
│                              │┌ Arguments ───────────────────────────────────┐
│                              ││  ● <file> = (empty)            File to format│
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
 ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q quit           T: [Dracula]
