src/snapshots/tuisage__ui__tests__snapshot_config_subcommands.snap
---
source: src/ui.rs
assertion_line: 391
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────────────────────────┐
│ $ mycli config                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands ────────────────────────────┐┌ Flags ───────────────────────────────────────────────────┐
│  init        Initialize a new project││  [0] -v, --verbose [G]             Enable verbose logging│
│▶ config          Manage configuration││  ○ -q, --quiet [G]                      Enable quiet mode│
│  │ set (add)       Set a config value││                                                          │
│  │ get             Get a config value││                                                          │
│  │ list (ls)   List all config values││                                                          │
│  │ remove (rm)  Remove a config value││                                                          │
│  run                       Run a task││                                                          │
│  deploy        Deploy the application││                                                          │
│  plugin                Manage plugins││                                                          │
│  │ install (i)       Install a plugin││                                                          │
│  │ uninstall (rm)  Uninstall a plugin│└──────────────────────────────────────────────────────────┘
│  │ list (ls)   List installed plugins│┌ Arguments ───────────────────────────────────────────────┐
│  │ update              Update plugins││                                                          │
│  version        Print the CLI version││                                                          │
│  help          Print help information││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q quit                               T: [Dracula]
