src/snapshots/tuisage__ui__tests__snapshot_deep_navigation.snap
---
source: src/ui.rs
assertion_line: 510
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────────────────────────┐
│ $ mycli plugin install                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands ────────────────────────────┐┌ Flags ───────────────────────────────────────────────────┐
│  init        Initialize a new project││  ○ -f, --force                            Force reinstall│
│  config          Manage configuration││  [0] -v, --verbose [G]             Enable verbose logging│
│  │ set (add)       Set a config value││  ○ -q, --quiet [G]                      Enable quiet mode│
│  │ get             Get a config value││                                                          │
│  │ list (ls)   List all config values││                                                          │
│  │ remove (rm)  Remove a config value││                                                          │
│  run                       Run a task││                                                          │
│  deploy        Deploy the application││                                                          │
│  plugin                Manage plugins││                                                          │
│▶ │ install (i)       Install a plugin││                                                          │
│  │ uninstall (rm)  Uninstall a plugin│└──────────────────────────────────────────────────────────┘
│  │ list (ls)   List installed plugins│┌ Arguments ───────────────────────────────────────────────┐
│  │ update              Update plugins││  ● <name> = (empty)                           Plugin name│
│  version        Print the CLI version││  ○ [version] = (empty)                     Plugin version│
│  help          Print help information││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q quit                               T: [Dracula]
