src/snapshots/tuisage__ui__tests__snapshot_deploy_leaf.snap
---
source: src/ui.rs
assertion_line: 399
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────────────────────────┐
│ $ mycli deploy                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands ────────────────────────────┐┌ Flags ───────────────────────────────────────────────────┐
│  init        Initialize a new project││  [·] --tag = <tag>                       Docker image tag│
│  config          Manage configuration││  ○ --rollback                Rollback to previous version│
│  │ set (add)       Set a config value││  ○ --skip-tests          Skip running tests before deploy│
│  │ get             Get a config value││  ○ -y, --yes                     Skip confirmation prompt│
│  │ list (ls)   List all config values││  [0] -v, --verbose [G]             Enable verbose logging│
│  │ remove (rm)  Remove a config value││  ○ -q, --quiet [G]                      Enable quiet mode│
│  run                       Run a task││                                                          │
│▶ deploy        Deploy the application││                                                          │
│  plugin                Manage plugins││                                                          │
│  │ install (i)       Install a plugin││                                                          │
│  │ uninstall (rm)  Uninstall a plugin│└──────────────────────────────────────────────────────────┘
│  │ list (ls)   List installed plugins│┌ Arguments ───────────────────────────────────────────────┐
│  │ update              Update plugins││  ● <environment> = <dev|staging|prod>  Target environment│
│  version        Print the CLI version││                                                          │
│  help          Print help information││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q quit                               T: [Dracula]
